[package]
name = "rs-kepler"
version = "0.1.0"
authors = ["Sebastian Zdanowicz <14982968+szdanowi@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.16.7"
cairo-rs = "0.9.1"
gtk = "0.9.1"
gio = "0.9.0"
glib = "0.10.1"
chrono = "0.4.13"
