[package]
name = "rs-kepler"
version = "0.1.0"
authors = ["Sebastian Zdanowicz <14982968+szdanowi@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = "0.9.1"
gdk = "0.13.0"
gtk = "0.9.1"
gio = "0.9.0"
glib = "0.10.1"
chrono = "0.4.13"
derive_more = { version = "0.99.9", default_features = false, features = ["add_assign", "mul"] }
