[package]
name = "rs-kepler"
version = "0.1.0"
authors = ["Sebastian Zdanowicz <14982968+szdanowi@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = { version = "0.9.1", default_features = false }
gdk = { version = "0.13.0", default_features = false }
gtk = { version = "0.9.1", default_features = false }
gio = { version = "0.9.0", default_features = false }
glib = { version = "0.10.1", default_features = false }
chrono = { version = "0.4.13", default_features = false, features = ["clock"] }
derive_more = { version = "0.99.9", default_features = false, features = ["add", "add_assign", "mul"] }
